(#03) fixed overflow in footer

--- a/PersonalPortfolioWebpage/PersonalPortfolioWebpage.css
+++ b/PersonalPortfolioWebpage/PersonalPortfolioWebpage.css
@@ -15,7 +15,7 @@
 body {
 	background-color: #1b1b32;
 	padding-top: 4rem;
-}
+	font-size: 16px;}
 
 header {
 	background-color: #0a0a23;
@@ -316,6 +316,7 @@ footer {
 	width: 100%;
 	text-transform: capitalize;
 	text-shadow: 2px 2px 4px #000000;
+	overflow: hidden;
 }
 
 footer ul {
